# cpp-agent

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  build.bat  build.ps1
agent_cli/: CMakeLists.txt  main.cpp
agent_cli/config/: AGENTS.md  IDENTITY.md  SOUL.md  agent.md
agent_cli/config/mcps/: mcp.json
agent_cli/config/skills/anysearch/: .env  SKILL.md
agent_cli/config/skills/anysearch/scripts/: anysearch_cli.py
agent_cli/config/skills/docx/scripts/: accept_changes.py  comment.py
agent_cli/config/skills/docx/scripts/office/: pack.py
agent_cli/config/skills/get_cwd/: SKILL.md
agent_cli/config/skills/mcp-builder/reference/: evaluation.md
agent_cli/config/skills/pdf/: SKILL.md
agent_cli/config/skills/pdf/scripts/: check_bounding_boxes.py  check_fillable_fields.py  convert_pdf_to_images.py  create_validation_image.py  extract_form_field_info.py  extract_form_structure.py  fill_fillable_fields.py  fill_pdf_form_with_annotations.py
agent_cli/config/skills/pptx/: SKILL.md
agent_cli/config/skills/pptx/scripts/: add_slide.py  clean.py  thumbnail.py
agent_cli/config/skills/pptx/scripts/office/: validate.py
agent_cli/config/skills/skill-creator/: SKILL.md
agent_cli/config/skills/skill-creator/references/: output-patterns.md
agent_cli/config/skills/skill-creator/scripts/: init_skill.py  quick_validate.py
agent_cli/config/skills/webapp-testing/scripts/: with_server.py
agent_cli/config/skills/xlsx/scripts/: recalc.py
agent_cli/config/skills/xlsx/scripts/office/: soffice.py  unpack.py
agent_cli/src/app/: agent_factory.cpp  agent_factory.h  auto_confirm_handler.cpp  auto_confirm_handler.h
agent_cli/src/channels/: channel.h  channel_factory.cpp  channel_factory.h
agent_cli/src/channels/wechat/: ilink_client.cpp  ilink_client.h  wechat_channel.cpp  wechat_channel.h
agent_cli/src/memory/: simple_memory.cpp  simple_memory.h
agent_cli/src/tools/: echo_tool.cpp  echo_tool.h  qr_code_tool.cpp  qr_code_tool.h
agent_cli/src/utils/: utils.cpp  utils.h
agent_cli/src/web_search/: baidu_ai_search.cpp  baidu_ai_search.h  bing_search.cpp  bing_search.h  bocha_search.cpp  bocha_search.h  openserp_search.cpp  openserp_search.h  volcano_search.cpp  volcano_search.h  web_search_common.cpp  web_search_common.h  web_search_impl.cpp  web_search_impl.h  web_search_tool_base.cpp  web_search_tool_base.h
agent_lib/include/agent/: agent.h  agent_config.h  builtin_tools.h  i_agent_loop.h  i_context_manager.h  i_llm_provider.h  i_mcp.h  i_memory.h  i_prompt_builder.h  i_tool.h  i_user_confirm_handler.h  personality.h  types.h
agent_lib/include/util/: base64.h  crypto_utils.h  i_http_client.h  log.h  (+1 more)
agent_lib/src/: CMakeLists.txt
agent_lib/src/agent/: agent_impl.cpp  agent_impl.h  agent_loop_base.cpp  agent_loop_base.h  context_manager.cpp  context_manager.h  plan_execute_loop.cpp  plan_execute_loop.h  plan_graph.h  prompt_builder.cpp  prompt_builder.h  react_loop.cpp  react_loop.h  reflection_loop.cpp  reflection_loop.h  token_usage_accumulator.h
agent_lib/src/confirm/: default_confirm_handler.cpp  default_confirm_handler.h
agent_lib/src/llm/: claude_provider.cpp  claude_provider.h  deepseek_provider.cpp  deepseek_provider.h  glm_provider.cpp  glm_provider.h  kimi_provider.cpp  kimi_provider.h  llm_provider_factory.cpp  llm_provider_factory.h  openai_compatible_provider.cpp  openai_compatible_provider.h  openai_provider.cpp  openai_provider.h
agent_lib/src/mcp/: json_rpc.h  mcp_client.cpp  mcp_client.h  mcp_manager.cpp  mcp_manager.h  mcp_transport.cpp  mcp_transport.h
agent_lib/src/memory/: default_memory.cpp  default_memory.h
agent_lib/src/skill/: skill_scanner.cpp  skill_scanner.h
agent_lib/src/tool/: execute_command_tool.cpp  execute_command_tool.h  fs_tools.cpp  fs_tools.h  load_mcp_tool.cpp  load_mcp_tool.h  read_skill_tool.cpp  read_skill_tool.h  script_tools.cpp  script_tools.h  tool_registry.cpp  tool_registry.h  web_fetch_tool.cpp  web_fetch_tool.h
agent_lib/src/util/: base64.cpp  crypto_utils.cpp  log.cpp  u8str_utils.cpp  utf8_utils.h  winhttp_client.cpp
specs/architecture/: spec.md
specs/implement-agent-framework/: checklist.md  spec.md  tasks.md
specs/plan-execute-improvement/: spec.md  tasks.md
specs/refactor-agent-lib-decoupling/: checklist.md  spec.md  tasks.md
specs/reflection-mode/: checklist.md  spec.md  tasks.md
specs/wechat-channel/: spec.md
specs/wechat-image-support/: checklist.md  spec.md  tasks.md
tests/: CMakeLists.txt
tests/framework_test/: CMakeLists.txt  main.cpp
tests/ilink_image_test/: main.cpp
tests/tool_test/: CMakeLists.txt  main.cpp
